# Lshot

./: CMakeLists.txt  README.md  rebrand.sh
data/: graphics.qrc  lshot.rc
data/appdata/: in.letmegrab.Lshot.metainfo.xml
data/dbus/: in.letmegrab.Lshot.service.in  in.letmegrab.Lshot.xml
data/desktopEntry/package/: in.letmegrab.Lshot.desktop
data/man/man1/: lshot.1
data/shell-completion/: lshot.bash  lshot.fish  lshot.zsh
data/snap/: snapcraft.yaml
packaging/win-installer/: wix_patch.xml
src/: CMakeLists.txt  main.cpp  windows-cli.cpp
src/cli/: CMakeLists.txt  commandlineparser.cpp
src/config/: CMakeLists.txt  configresolver.cpp  generalconf.cpp  setshortcutwidget.cpp  shortcutswidget.cpp  visualseditor.cpp
src/core/: CMakeLists.txt  globalshortcutfilter.cpp  lshot.cpp  lshot.h  lshotdaemon.cpp  lshotdaemon.h  lshotdbusadapter.cpp  lshotdbusadapter.h  signaldaemon.cpp
src/tools/: CMakeLists.txt  capturetool.h
src/tools/imgupload/: imguploadermanager.cpp
src/tools/imgupload/storages/: imguploaderbase.cpp
src/tools/imgupload/storages/localassets/: localassetsuploader.cpp  localassetsuploader.h
src/tools/pin/: pinwidget.cpp
src/tools/sizedecrease/: sizedecreasetool.cpp  sizedecreasetool.h
src/tools/sizeincrease/: sizeincreasetool.cpp  sizeincreasetool.h
src/utils/: CMakeLists.txt  abstractlogger.cpp  confighandler.cpp  confighandler.h  globalvalues.cpp  history.cpp  pathinfo.cpp  screengrabber.cpp  screenshotsaver.cpp  systemnotification.cpp  valuehandler.cpp
src/widgets/: CMakeLists.txt  capturelauncher.cpp  infowindow.cpp  infowindow.ui  trayicon.cpp  updatenotificationwidget.cpp  uploadhistory.ui  uploadlineitem.cpp
src/widgets/capture/: CMakeLists.txt  capturewidget.cpp
src/widgets/panel/: CMakeLists.txt
